# nc-check

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cfchecker_report.json  mkdocs.yml  pyproject.toml  test.ipynb
.github/workflows/: docs-pages.yml  tests.yml
docs/: README.md  add-check-suite.md  checks-and-reports.md  cli.md  development.md  index.md  python-api.md
docs/stylesheets/: extra.css
output/jupyter-notebook/: cf-coercer-example.ipynb  demo_report.html  nc-check-plugin-architecture-demo.ipynb  test_cfchecker.py
src/nc_check/: __init__.py  accessor.py  api.py  cli.py  config.py  core.py  dataset.py  formatting.py  heuristic.py  models.py  ocean.py  report.css  report_styles.py  report_templates.py  reporting.py  settings.py  suite.py
src/nc_check/checks/: __init__.py  heuristic.py  ocean.py  time_cover.py
src/nc_check/contracts/: __init__.py  suite.py
src/nc_check/core/: __init__.py  check.py  compliance.py  (+1 more)
src/netcdf_cf_coercer/: accessor.py  cli.py  core.py  formatting.py  standard_names.py
tests/: test_accessor.py  test_check_models.py  test_checks.py  test_cli.py  test_comply_pipeline.py  test_core.py  test_dask_lazy.py  test_dataset.py  test_formatting.py  test_gnarly_fixtures.py  test_gnarly_netcdf.py  test_heuristic_extended.py  test_ocean.py  test_standard_names.py  test_suite.py  test_suite_and_plugins.py
tests/data/: bad_time_units.nc  bad_var_names.nc  cf-standard-name-table.xml  kitchen_sink.nc  lat_upside_down.nc  lon_offset_wrong_labels.nc  make_gnarly_fixtures.py  missing_lon_slices.nc  missing_units.nc  wrong_dim_order.nc
(+14 files in other folders)
